<resources>
    <string name="app_name">INTEMASC captura</string>
    <string name="low_storage_error">Las dependecias del detector no se pueden descargar debido a la falta de espacio en el dispositivo</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">El acceso a la cámara es necesario para la detección</string>
    <string name="permission_extenal_storage">El acceso a almacenamiento es necesario para guardar las fotos y etiquetas</string>
    <string name="no_camera_permission">Esta aplicación no puede funcionar debido a las restricciones con los permisos. Por favor, concede los permisos solicitados. La aplicación se cerrará.</string>
    <string name="boton_arrancar">Comenzar</string>
    <!--Mensaje de Bienvenida (activity_main), la primera Actividad que ve el usuario -->
    <string name="msgBienvenida">
Esta aplicación tiene como objetivo recopilar una base de datos que permita implementar medidas para mejorar el ajuste de las mascarillas.\n\n
Solo tienes que ponerte una mascarilla y tomarte una foto de cara y otra de perfil.\n\n
Puedes tomarte varias fotos, tanto con la mascarilla bien colocada como mal.
Los problemas que trataremos de detectar son:
No simétrica, Mal extendida, Debajo puente nasal, Debajo nariz, Gafas por debajo, Ajuste Cuello, Barba, Mal ajuste nasal, Goma mal colocada, Hueco Lateral, Sin mascarilla.\n\n
Muchas gracias por colaborar con la Universidad Politécnica de Valencia, FISABIO y el Hospital General d’Ontinyent en este proyecto.\n\n
PROTECCIÓN DE DATOS:\n Las fotografías son tratadas de forma totalmente anónima y solo serán utilizadas para los fines descritos en el proyecto.
    </string>
    <string name="error_upload_photos">Error: Ha ocurrido un error inesperado al compartir las fotos. ¿Desea intentar otra vez?</string>
    <!--Mensaje de Finalización, cuando las fotos se han subido por completado -->
    <string name="title_mostrar_dialogo">Operación Exitosa!</string>
    <string name="message_mostrar_dialogo">Gracias por colaborar con el proyecto. Si pudieras colocarte la máscara en otra posición y tomarte nuevas fotos, nos sería de gran ayuda.</string>
    <!--Mensaje de Finalización, cuando las fotos se han descargado -->
    <string name="message_mostrar_dialogo_no_descargas">No existen fotos y/o etiquetas nuevas para descargar</string>
    <string name="message_mostrar_dialogo_descargas_finalizada">Las fotos se han descargado en el directorio "Mascarillas"</string>
    <string name="message_mostrar_dialogo_descargas_fallidas">Error inesperado, las fotos no se han podido descargadar.</string>
    <string name="message_mostrar_dialogo_descargas_cancelada">Has cancelado la descarga.</string>
    <string name="title_mostrar_dialogo_no_descargas">Operación No Exitosa!</string>
    <string name="title_mostrar_dialogo_operacion_cancel">Operación Cancelada!</string>
    <!--Mensaje de Finalización, cuando las propiedades de las etiquetas se han exportado a CSV  -->
    <string name="message_mostrar_dialogo_etiquetas_exportadas_CSV">La información de las etiquetas se ha descargado en el directorio "Download/Mascarillas", utiliza Excel para abrirlas</string>
    <!--Botones de ShowActivity (activity_show_activity) -->
    <string name="btn_descartar_foto">Descartar</string>
    <string name="btn_aceptar_foto">Aceptar</string>
    <!--Botones de RecognitionActivity - Mostrar dialogo -->
    <string name="btn_salir">Descartar</string>
    <string name="btn_continuar">Aceptar</string>
    <!--Snackbar de RecognitionActivity - -->
    <string name="snackbar_try_mach_face">Intenta coincidir tu cara con la imagen</string>
    <string name="snackbar_error">ERROR INESPERADO</string>

    <!-- Strings de diálogo login personalizado -->
    <string name="mostrar_contrasena_check">Mostrar contraseña</string>
    <string name="password_error">Contraseña Incorrecta!</string>
    <string name="cerrar_boton">Cerrar</string>
    <string name="entrar_boton">ENTRAR</string>
    <string name="password_login_evaluator">mascarilla1234</string>
    <string name="password_download">4321</string>
    <string name="title_login_evaluator">Clave de Acceso</string>
    <string name="msg_login_evaluator">Ingresa tu contraseña</string>

    <!-- Tab EvaluadorActivity     -->
    <string name="tab_lista_evaluados">Lista Etiquetados</string>
    <string name="tab_lista_sin_evaluar">Lista Sin Etiquetar</string>

    <!--Menú MainActivity -->
    <string name="menu_modo_evaluador">Pasar Modo Etiquetador</string>
    <!-- menu label    -->
    <string name="menu_label_cerrar">Cancelar</string>
    <string name="menu_label_siguiente">Siguiente</string>
    <string name="menu_label_aceptar">Aceptar</string>
    <!-- menu Listlabel    -->
    <string name="menu_preferencias">Preferencias</string>
    <string name="menu_download">Descargas</string>

    <!-- Tipos de Etiquetas (Problemas Fotos)  -->
    <!--string name="label_1">No simétrica</string>
    <string name="label_2">Mal extendida</string>
    <string name="label_3">Debajo puente nasal</string>
    <string name="label_4">Gafas por debajo</string>
    <string name="label_5">Ajuste Cuello</string>
    <string name="label_6">Barba</string>
    <string name="label_7">Mal ajuste nasal</string>
    <string name="label_8">Goma mal colocada</string>
    <string name="label_9">Hueco Lateral</string-->
    <string name="correct_label">CORRECTA</string>

    <!-- Nombres de las propiedades de las etiquetas para la exportación a CSV   -->
    <string name="id">ID</string>
    <string name="creation_date">FECHA/HORA DE CREACION</string>
    <string name="url_Photo">URL DE FOTOS ETIQUETADAS</string>

    <!-- Preference    -->
    <string name="action_setting">Preferencias</string>
    <string name="pref_remember_password">Recordar contraseña</string>
    <string name="pref_summary_password">Guarda la clave de acceso de modo etiquetador</string>
    <string name="pref_download_photo_and_data">Descargar fotos e información de etiquetas</string>
    <string name="pref_summary_download_photo">Guarda las fotos etiquetadas a la memoría de tu móvil</string>
    <string name="pref_download_photo">Bajar fotos al móvil</string>
    <string name="pref_download_label">Bajar Etiquetas al móvil</string>
    <string name="pref_summary_download_label">Guarda la información de las etiquetas al móvil en formato .csv</string>

    <string name="pref_select_date">Personalizar descarga con Fecha/Hora</string>
    <string name="pref_choose_date">Selecciona fecha y/o hora de las fotos o etiquetas para descargar al móvil </string>
    <string name="pref_summary_choose_date">Permite seleccionar una fecha y hora deseada de las fotos y/o etiquetas</string>
    <string name="pref_summary_register_download">Foto/Etiqueta</string>
    <string name="pref_list_download">Descarga con fecha/hora personalizada</string>
    <string name="pref_custom_download">Descarga personalizada</string>
    <string name="pref_summary_list_download">Selecciona la opción para descargar Fotos/Etiquetas</string>
    <string name="tag_time_picker">Selecciona la hora de búsqueda</string>

    <string name="pref_register_download">Última descarga</string>
</resources>
