<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences_download" >
    <PreferenceCategory android:title="@string/pref_download_photo_and_data">
        <ListPreference
            android:key="download_photo"
            android:title="@string/pref_download_photo"
            android:summary="@string/pref_summary_download_photo"
            android:entries="@array/control_dates"
            android:entryValues="@array/control_dates_values"
            android:defaultValue="0"/>
        <ListPreference
            android:key="download_label"
            android:summary="@string/pref_summary_download_label"
            android:title="@string/pref_download_label"
            android:entries="@array/control_dates"
            android:entryValues="@array/control_dates_values"
            android:defaultValue="0"/>
    </PreferenceCategory >
    <PreferenceScreen
        android:title="@string/pref_select_date"
        android:summary="@string/pref_summary_choose_date">
        <PreferenceCategory android:title="@string/pref_choose_date">
        <es.upv.master.android.reconocimientofacial.ui.preferences.DatePreference
            android:key="pref_inicial_date"
            android:title="Seleccionar fecha inicial"
            android:defaultValue="2020-01-01"
            android:summary="2020-01-01"/>
        <es.upv.master.android.reconocimientofacial.ui.preferences.DatePreference
            android:key="pref_final_date"
            android:title="Seleccionar fecha final"
            android:defaultValue="2020-01-01"
            android:summary="2020-01-01"/>
        <Preference
            android:key="set_time_ini"
            android:title="Seleccionar hora inicial"
            android:summary="15:05:00"/>
        <Preference
            android:key="set_time_fin"
            android:title="Seleccionar hora final"
            android:summary="15:05:00"/>
        <ListPreference
            android:key="download_label_and_photo"
            android:summary="@string/pref_summary_list_download"
            android:title="@string/pref_list_download"
            android:entries="@array/control_opt_download"
            android:entryValues="@array/control_opt_download_values"
            android:defaultValue="0"/>
        </PreferenceCategory >
    </PreferenceScreen >
    <EditTextPreference
        android:key="register_download"
        android:summary="@string/pref_summary_register_download"
        android:title="@string/pref_register_download"
        android:defaultValue="@string/pref_summary_register_download"/>

</PreferenceScreen>
